--- a/advancedsearch.html
+++ b/advancedsearch.html
@@ -11,7 +11,7 @@
     <header>
       <img src="images/logo.png" alt="google logo" width="100px" />
       <div>
-        <a href="googlesearch.html">Google Search</a>
+        <a href="index.html">Google Search</a>
         <a href="imagesearch.html">Image Search</a>
       </div>
     </header>
