--- a/imagesearch.html
+++ b/imagesearch.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <a href="googlesearch.html">Google Search</a>
+    <a href="index.html">Google Search</a>
     <a href="advancedsearch.html">Advanced Search</a>
   </header>
   <div>
